[gd_scene load_steps=8 format=3 uid="uid://b6pi4r17v0xlq"]

[ext_resource type="Script" path="res://scripts/bulb_blossom.gd" id="1_vtn6c"]
[ext_resource type="Shader" path="res://shaders/sway.gdshader" id="2_laaxg"]
[ext_resource type="Texture2D" uid="uid://but2p2n1xfnt6" path="res://assets/sprites/level_objects/bulb_rose.png" id="3_ty0hj"]

[sub_resource type="CircleShape2D" id="CircleShape2D_q4ywm"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yg4tq"]
shader = ExtResource("2_laaxg")

[sub_resource type="Gradient" id="Gradient_nv8wf"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_btfmg"]
gradient = SubResource("Gradient_nv8wf")
width = 96
height = 96
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.8, 0.8)

[node name="bulb_rose" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_vtn6c")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("CircleShape2D_q4ywm")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_yg4tq")
position = Vector2(0, -8)
texture = ExtResource("3_ty0hj")

[node name="BulbLight" type="PointLight2D" parent="."]
position = Vector2(0, -8)
enabled = false
color = Color(0.427451, 0.917647, 0.839216, 1)
texture = SubResource("GradientTexture2D_btfmg")

[node name="BulbTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="BulbTimer" to="." method="_on_bulb_timer_timeout"]
